# ApexCoach

./: LICENSE  README.md  pyproject.toml
config/: apexcoach.example.yaml
docs/aim_diagnosis/: 01_screen_flow.md  02_clip_analysis_api.md  03_comment_templates.md  04_label_drill_mapping.md  05_task_breakdown.md  README.md
logs/: coach_review.md  llm_requests.jsonl
src/apexcoach/: __init__.py  __main__.py  action_arbiter.py  capture_service.py  cli.py  config.py  detection_debug.py  display_text.py  event_detector.py  llm_advisor.py  models.py  overlay_renderer.py  pipeline.py  roi_manager.py  rule_decision_engine.py  session_logger.py  state_aggregator.py  ui_parser.py  vitals.py
src/apexcoach/aim_diagnosis/: __init__.py  clip_analyzer.py  comment_builder.py  labeler.py  models.py  service.py  training_planner.py
src/apexcoach/providers/: __init__.py  base.py  factory.py  lmstudio_provider.py  mock_provider.py  prompt_builder.py  response_parser.py  types.py
src/apexcoach/utils/: jsonl_logger.py
tests/: test_action_arbiter.py  test_aim_diagnosis_service.py  test_capture_service.py  test_cli.py  test_clip_analyzer.py  test_comment_builder.py  test_detection_debug.py  test_event_detector.py  test_labeler.py  test_llm_advisor.py  test_llm_advisor_empty_review.py  test_llm_advisor_model_fallbacks.py  test_lmstudio_provider.py  test_parallel_io.py  test_pipeline.py  test_response_parser.py  test_roi_manager.py  test_rule_decision_engine.py  test_state_aggregator.py  test_training_planner.py  test_ui_parser.py  test_vitals.py
